9submit/6/parser.output
   0  $accept : %entry% $end

   1  toplevel : expr SEMISEMI
   2           | LET var EQ expr SEMISEMI
   3           | LET var EQ REF expr SEMISEMI
   4           | LET REC var var EQ expr SEMISEMI
   5           | error

   6  expr : LET var EQ expr IN expr
   7       | LET REC var var EQ expr IN expr
   8       | IF expr THEN expr ELSE expr
   9       | FUN var ARROW expr
  10       | arith_expr EQ arith_expr
  11       | arith_expr LT arith_expr
  12       | MATCH expr WITH cases
  13       | MATCH expr WITH BAR cases
  14       | list_expr
  15       | LET var EQ REF expr IN expr
  16       | var CORON EQ expr

  17  cases : pattern ARROW expr
  18        | pattern ARROW expr BAR cases

  19  pattern : atomic_pattern CONS pattern
  20          | atomic_pattern

  21  atomic_pattern : INT
  22                 | BOOL
  23                 | var
  24                 | LPAR pattern COMMA pattern RPAR
  25                 | LBRACKET RBRACKET
  26                 | LPAR pattern RPAR

  27  list_expr : arith_expr CONS list_expr
  28            | arith_expr

  29  arith_expr : arith_expr PLUS factor_expr
  30             | arith_expr MINUS factor_expr
  31             | factor_expr

  32  factor_expr : factor_expr TIMES app_expr
  33              | factor_expr DIV app_expr
  34              | app_expr

  35  app_expr : app_expr atomic_expr
  36           | atomic_expr

  37  atomic_expr : INT
  38              | BOOL
  39              | LPAR expr COMMA expr RPAR
  40              | LBRACKET RBRACKET
  41              | ID
  42              | LPAR expr RPAR
  43              | EXCLAM ID

  44  var : ID

  45  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (45)

	error  shift 3
	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 7
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	EXCLAM  shift 13
	.  error

	toplevel  goto 14
	expr  goto 15
	var  goto 16
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	toplevel : error .  (5)

	.  reduce 5


state 4
	atomic_expr : INT .  (37)

	.  reduce 37


state 5
	atomic_expr : BOOL .  (38)

	.  reduce 38


state 6
	atomic_expr : ID .  (41)
	var : ID .  (44)

	INT  reduce 41
	BOOL  reduce 41
	ID  reduce 41
	IN  reduce 41
	PLUS  reduce 41
	TIMES  reduce 41
	MINUS  reduce 41
	DIV  reduce 41
	EQ  reduce 41
	LT  reduce 41
	THEN  reduce 41
	ELSE  reduce 41
	LPAR  reduce 41
	RPAR  reduce 41
	LBRACKET  reduce 41
	CONS  reduce 41
	COMMA  reduce 41
	WITH  reduce 41
	BAR  reduce 41
	SEMISEMI  reduce 41
	CORON  reduce 44
	EXCLAM  reduce 41


state 7
	toplevel : LET . var EQ expr SEMISEMI  (2)
	toplevel : LET . var EQ REF expr SEMISEMI  (3)
	toplevel : LET . REC var var EQ expr SEMISEMI  (4)
	expr : LET . var EQ expr IN expr  (6)
	expr : LET . REC var var EQ expr IN expr  (7)
	expr : LET . var EQ REF expr IN expr  (15)

	ID  shift 22
	REC  shift 23
	.  error

	var  goto 24


state 8
	expr : IF . expr THEN expr ELSE expr  (8)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 25
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	EXCLAM  shift 13
	.  error

	expr  goto 26
	var  goto 16
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 9
	atomic_expr : LPAR . expr COMMA expr RPAR  (39)
	atomic_expr : LPAR . expr RPAR  (42)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 25
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	EXCLAM  shift 13
	.  error

	expr  goto 27
	var  goto 16
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 10
	expr : FUN . var ARROW expr  (9)

	ID  shift 22
	.  error

	var  goto 28


state 11
	atomic_expr : LBRACKET . RBRACKET  (40)

	RBRACKET  shift 29
	.  error


state 12
	expr : MATCH . expr WITH cases  (12)
	expr : MATCH . expr WITH BAR cases  (13)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 25
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	EXCLAM  shift 13
	.  error

	expr  goto 30
	var  goto 16
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 13
	atomic_expr : EXCLAM . ID  (43)

	ID  shift 31
	.  error


state 14
	%entry% : '\001' toplevel .  (45)

	.  reduce 45


state 15
	toplevel : expr . SEMISEMI  (1)

	SEMISEMI  shift 32
	.  error


state 16
	expr : var . CORON EQ expr  (16)

	CORON  shift 33
	.  error


state 17
	expr : arith_expr . EQ arith_expr  (10)
	expr : arith_expr . LT arith_expr  (11)
	list_expr : arith_expr . CONS list_expr  (27)
	list_expr : arith_expr .  (28)
	arith_expr : arith_expr . PLUS factor_expr  (29)
	arith_expr : arith_expr . MINUS factor_expr  (30)

	PLUS  shift 34
	MINUS  shift 35
	EQ  shift 36
	LT  shift 37
	CONS  shift 38
	IN  reduce 28
	THEN  reduce 28
	ELSE  reduce 28
	RPAR  reduce 28
	COMMA  reduce 28
	WITH  reduce 28
	BAR  reduce 28
	SEMISEMI  reduce 28


state 18
	expr : list_expr .  (14)

	.  reduce 14


state 19
	arith_expr : factor_expr .  (31)
	factor_expr : factor_expr . TIMES app_expr  (32)
	factor_expr : factor_expr . DIV app_expr  (33)

	TIMES  shift 39
	DIV  shift 40
	IN  reduce 31
	PLUS  reduce 31
	MINUS  reduce 31
	EQ  reduce 31
	LT  reduce 31
	THEN  reduce 31
	ELSE  reduce 31
	RPAR  reduce 31
	CONS  reduce 31
	COMMA  reduce 31
	WITH  reduce 31
	BAR  reduce 31
	SEMISEMI  reduce 31


state 20
	factor_expr : app_expr .  (34)
	app_expr : app_expr . atomic_expr  (35)

	INT  shift 4
	BOOL  shift 5
	ID  shift 41
	LPAR  shift 9
	LBRACKET  shift 11
	EXCLAM  shift 13
	IN  reduce 34
	PLUS  reduce 34
	TIMES  reduce 34
	MINUS  reduce 34
	DIV  reduce 34
	EQ  reduce 34
	LT  reduce 34
	THEN  reduce 34
	ELSE  reduce 34
	RPAR  reduce 34
	CONS  reduce 34
	COMMA  reduce 34
	WITH  reduce 34
	BAR  reduce 34
	SEMISEMI  reduce 34

	atomic_expr  goto 42


state 21
	app_expr : atomic_expr .  (36)

	.  reduce 36


state 22
	var : ID .  (44)

	.  reduce 44


state 23
	toplevel : LET REC . var var EQ expr SEMISEMI  (4)
	expr : LET REC . var var EQ expr IN expr  (7)

	ID  shift 22
	.  error

	var  goto 43


state 24
	toplevel : LET var . EQ expr SEMISEMI  (2)
	toplevel : LET var . EQ REF expr SEMISEMI  (3)
	expr : LET var . EQ expr IN expr  (6)
	expr : LET var . EQ REF expr IN expr  (15)

	EQ  shift 44
	.  error


state 25
	expr : LET . var EQ expr IN expr  (6)
	expr : LET . REC var var EQ expr IN expr  (7)
	expr : LET . var EQ REF expr IN expr  (15)

	ID  shift 22
	REC  shift 45
	.  error

	var  goto 46


state 26
	expr : IF expr . THEN expr ELSE expr  (8)

	THEN  shift 47
	.  error


state 27
	atomic_expr : LPAR expr . COMMA expr RPAR  (39)
	atomic_expr : LPAR expr . RPAR  (42)

	RPAR  shift 48
	COMMA  shift 49
	.  error


state 28
	expr : FUN var . ARROW expr  (9)

	ARROW  shift 50
	.  error


state 29
	atomic_expr : LBRACKET RBRACKET .  (40)

	.  reduce 40


state 30
	expr : MATCH expr . WITH cases  (12)
	expr : MATCH expr . WITH BAR cases  (13)

	WITH  shift 51
	.  error


state 31
	atomic_expr : EXCLAM ID .  (43)

	.  reduce 43


state 32
	toplevel : expr SEMISEMI .  (1)

	.  reduce 1


state 33
	expr : var CORON . EQ expr  (16)

	EQ  shift 52
	.  error


state 34
	arith_expr : arith_expr PLUS . factor_expr  (29)

	INT  shift 4
	BOOL  shift 5
	ID  shift 41
	LPAR  shift 9
	LBRACKET  shift 11
	EXCLAM  shift 13
	.  error

	factor_expr  goto 53
	app_expr  goto 20
	atomic_expr  goto 21


state 35
	arith_expr : arith_expr MINUS . factor_expr  (30)

	INT  shift 4
	BOOL  shift 5
	ID  shift 41
	LPAR  shift 9
	LBRACKET  shift 11
	EXCLAM  shift 13
	.  error

	factor_expr  goto 54
	app_expr  goto 20
	atomic_expr  goto 21


state 36
	expr : arith_expr EQ . arith_expr  (10)

	INT  shift 4
	BOOL  shift 5
	ID  shift 41
	LPAR  shift 9
	LBRACKET  shift 11
	EXCLAM  shift 13
	.  error

	arith_expr  goto 55
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 37
	expr : arith_expr LT . arith_expr  (11)

	INT  shift 4
	BOOL  shift 5
	ID  shift 41
	LPAR  shift 9
	LBRACKET  shift 11
	EXCLAM  shift 13
	.  error

	arith_expr  goto 56
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 38
	list_expr : arith_expr CONS . list_expr  (27)

	INT  shift 4
	BOOL  shift 5
	ID  shift 41
	LPAR  shift 9
	LBRACKET  shift 11
	EXCLAM  shift 13
	.  error

	arith_expr  goto 57
	list_expr  goto 58
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 39
	factor_expr : factor_expr TIMES . app_expr  (32)

	INT  shift 4
	BOOL  shift 5
	ID  shift 41
	LPAR  shift 9
	LBRACKET  shift 11
	EXCLAM  shift 13
	.  error

	app_expr  goto 59
	atomic_expr  goto 21


state 40
	factor_expr : factor_expr DIV . app_expr  (33)

	INT  shift 4
	BOOL  shift 5
	ID  shift 41
	LPAR  shift 9
	LBRACKET  shift 11
	EXCLAM  shift 13
	.  error

	app_expr  goto 60
	atomic_expr  goto 21


state 41
	atomic_expr : ID .  (41)

	.  reduce 41


state 42
	app_expr : app_expr atomic_expr .  (35)

	.  reduce 35


state 43
	toplevel : LET REC var . var EQ expr SEMISEMI  (4)
	expr : LET REC var . var EQ expr IN expr  (7)

	ID  shift 22
	.  error

	var  goto 61


state 44
	toplevel : LET var EQ . expr SEMISEMI  (2)
	toplevel : LET var EQ . REF expr SEMISEMI  (3)
	expr : LET var EQ . expr IN expr  (6)
	expr : LET var EQ . REF expr IN expr  (15)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 25
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	REF  shift 62
	EXCLAM  shift 13
	.  error

	expr  goto 63
	var  goto 16
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 45
	expr : LET REC . var var EQ expr IN expr  (7)

	ID  shift 22
	.  error

	var  goto 64


state 46
	expr : LET var . EQ expr IN expr  (6)
	expr : LET var . EQ REF expr IN expr  (15)

	EQ  shift 65
	.  error


state 47
	expr : IF expr THEN . expr ELSE expr  (8)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 25
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	EXCLAM  shift 13
	.  error

	expr  goto 66
	var  goto 16
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 48
	atomic_expr : LPAR expr RPAR .  (42)

	.  reduce 42


state 49
	atomic_expr : LPAR expr COMMA . expr RPAR  (39)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 25
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	EXCLAM  shift 13
	.  error

	expr  goto 67
	var  goto 16
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 50
	expr : FUN var ARROW . expr  (9)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 25
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	EXCLAM  shift 13
	.  error

	expr  goto 68
	var  goto 16
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 51
	expr : MATCH expr WITH . cases  (12)
	expr : MATCH expr WITH . BAR cases  (13)

	INT  shift 69
	BOOL  shift 70
	ID  shift 22
	LPAR  shift 71
	LBRACKET  shift 72
	BAR  shift 73
	.  error

	var  goto 74
	cases  goto 75
	pattern  goto 76
	atomic_pattern  goto 77


state 52
	expr : var CORON EQ . expr  (16)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 25
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	EXCLAM  shift 13
	.  error

	expr  goto 78
	var  goto 16
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 53
	arith_expr : arith_expr PLUS factor_expr .  (29)
	factor_expr : factor_expr . TIMES app_expr  (32)
	factor_expr : factor_expr . DIV app_expr  (33)

	TIMES  shift 39
	DIV  shift 40
	IN  reduce 29
	PLUS  reduce 29
	MINUS  reduce 29
	EQ  reduce 29
	LT  reduce 29
	THEN  reduce 29
	ELSE  reduce 29
	RPAR  reduce 29
	CONS  reduce 29
	COMMA  reduce 29
	WITH  reduce 29
	BAR  reduce 29
	SEMISEMI  reduce 29


state 54
	arith_expr : arith_expr MINUS factor_expr .  (30)
	factor_expr : factor_expr . TIMES app_expr  (32)
	factor_expr : factor_expr . DIV app_expr  (33)

	TIMES  shift 39
	DIV  shift 40
	IN  reduce 30
	PLUS  reduce 30
	MINUS  reduce 30
	EQ  reduce 30
	LT  reduce 30
	THEN  reduce 30
	ELSE  reduce 30
	RPAR  reduce 30
	CONS  reduce 30
	COMMA  reduce 30
	WITH  reduce 30
	BAR  reduce 30
	SEMISEMI  reduce 30


state 55
	expr : arith_expr EQ arith_expr .  (10)
	arith_expr : arith_expr . PLUS factor_expr  (29)
	arith_expr : arith_expr . MINUS factor_expr  (30)

	PLUS  shift 34
	MINUS  shift 35
	IN  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	RPAR  reduce 10
	COMMA  reduce 10
	WITH  reduce 10
	BAR  reduce 10
	SEMISEMI  reduce 10


state 56
	expr : arith_expr LT arith_expr .  (11)
	arith_expr : arith_expr . PLUS factor_expr  (29)
	arith_expr : arith_expr . MINUS factor_expr  (30)

	PLUS  shift 34
	MINUS  shift 35
	IN  reduce 11
	THEN  reduce 11
	ELSE  reduce 11
	RPAR  reduce 11
	COMMA  reduce 11
	WITH  reduce 11
	BAR  reduce 11
	SEMISEMI  reduce 11


state 57
	list_expr : arith_expr . CONS list_expr  (27)
	list_expr : arith_expr .  (28)
	arith_expr : arith_expr . PLUS factor_expr  (29)
	arith_expr : arith_expr . MINUS factor_expr  (30)

	PLUS  shift 34
	MINUS  shift 35
	CONS  shift 38
	IN  reduce 28
	THEN  reduce 28
	ELSE  reduce 28
	RPAR  reduce 28
	COMMA  reduce 28
	WITH  reduce 28
	BAR  reduce 28
	SEMISEMI  reduce 28


state 58
	list_expr : arith_expr CONS list_expr .  (27)

	.  reduce 27


state 59
	factor_expr : factor_expr TIMES app_expr .  (32)
	app_expr : app_expr . atomic_expr  (35)

	INT  shift 4
	BOOL  shift 5
	ID  shift 41
	LPAR  shift 9
	LBRACKET  shift 11
	EXCLAM  shift 13
	IN  reduce 32
	PLUS  reduce 32
	TIMES  reduce 32
	MINUS  reduce 32
	DIV  reduce 32
	EQ  reduce 32
	LT  reduce 32
	THEN  reduce 32
	ELSE  reduce 32
	RPAR  reduce 32
	CONS  reduce 32
	COMMA  reduce 32
	WITH  reduce 32
	BAR  reduce 32
	SEMISEMI  reduce 32

	atomic_expr  goto 42


state 60
	factor_expr : factor_expr DIV app_expr .  (33)
	app_expr : app_expr . atomic_expr  (35)

	INT  shift 4
	BOOL  shift 5
	ID  shift 41
	LPAR  shift 9
	LBRACKET  shift 11
	EXCLAM  shift 13
	IN  reduce 33
	PLUS  reduce 33
	TIMES  reduce 33
	MINUS  reduce 33
	DIV  reduce 33
	EQ  reduce 33
	LT  reduce 33
	THEN  reduce 33
	ELSE  reduce 33
	RPAR  reduce 33
	CONS  reduce 33
	COMMA  reduce 33
	WITH  reduce 33
	BAR  reduce 33
	SEMISEMI  reduce 33

	atomic_expr  goto 42


state 61
	toplevel : LET REC var var . EQ expr SEMISEMI  (4)
	expr : LET REC var var . EQ expr IN expr  (7)

	EQ  shift 79
	.  error


state 62
	toplevel : LET var EQ REF . expr SEMISEMI  (3)
	expr : LET var EQ REF . expr IN expr  (15)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 25
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	EXCLAM  shift 13
	.  error

	expr  goto 80
	var  goto 16
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 63
	toplevel : LET var EQ expr . SEMISEMI  (2)
	expr : LET var EQ expr . IN expr  (6)

	IN  shift 81
	SEMISEMI  shift 82
	.  error


state 64
	expr : LET REC var . var EQ expr IN expr  (7)

	ID  shift 22
	.  error

	var  goto 83


state 65
	expr : LET var EQ . expr IN expr  (6)
	expr : LET var EQ . REF expr IN expr  (15)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 25
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	REF  shift 84
	EXCLAM  shift 13
	.  error

	expr  goto 85
	var  goto 16
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 66
	expr : IF expr THEN expr . ELSE expr  (8)

	ELSE  shift 86
	.  error


state 67
	atomic_expr : LPAR expr COMMA expr . RPAR  (39)

	RPAR  shift 87
	.  error


state 68
	expr : FUN var ARROW expr .  (9)

	.  reduce 9


state 69
	atomic_pattern : INT .  (21)

	.  reduce 21


state 70
	atomic_pattern : BOOL .  (22)

	.  reduce 22


state 71
	atomic_pattern : LPAR . pattern COMMA pattern RPAR  (24)
	atomic_pattern : LPAR . pattern RPAR  (26)

	INT  shift 69
	BOOL  shift 70
	ID  shift 22
	LPAR  shift 71
	LBRACKET  shift 72
	.  error

	var  goto 74
	pattern  goto 88
	atomic_pattern  goto 77


state 72
	atomic_pattern : LBRACKET . RBRACKET  (25)

	RBRACKET  shift 89
	.  error


state 73
	expr : MATCH expr WITH BAR . cases  (13)

	INT  shift 69
	BOOL  shift 70
	ID  shift 22
	LPAR  shift 71
	LBRACKET  shift 72
	.  error

	var  goto 74
	cases  goto 90
	pattern  goto 76
	atomic_pattern  goto 77


state 74
	atomic_pattern : var .  (23)

	.  reduce 23


state 75
	expr : MATCH expr WITH cases .  (12)

	.  reduce 12


state 76
	cases : pattern . ARROW expr  (17)
	cases : pattern . ARROW expr BAR cases  (18)

	ARROW  shift 91
	.  error


state 77
	pattern : atomic_pattern . CONS pattern  (19)
	pattern : atomic_pattern .  (20)

	CONS  shift 92
	RPAR  reduce 20
	ARROW  reduce 20
	COMMA  reduce 20


state 78
	expr : var CORON EQ expr .  (16)

	.  reduce 16


state 79
	toplevel : LET REC var var EQ . expr SEMISEMI  (4)
	expr : LET REC var var EQ . expr IN expr  (7)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 25
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	EXCLAM  shift 13
	.  error

	expr  goto 93
	var  goto 16
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 80
	toplevel : LET var EQ REF expr . SEMISEMI  (3)
	expr : LET var EQ REF expr . IN expr  (15)

	IN  shift 94
	SEMISEMI  shift 95
	.  error


state 81
	expr : LET var EQ expr IN . expr  (6)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 25
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	EXCLAM  shift 13
	.  error

	expr  goto 96
	var  goto 16
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 82
	toplevel : LET var EQ expr SEMISEMI .  (2)

	.  reduce 2


state 83
	expr : LET REC var var . EQ expr IN expr  (7)

	EQ  shift 97
	.  error


state 84
	expr : LET var EQ REF . expr IN expr  (15)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 25
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	EXCLAM  shift 13
	.  error

	expr  goto 98
	var  goto 16
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 85
	expr : LET var EQ expr . IN expr  (6)

	IN  shift 81
	.  error


state 86
	expr : IF expr THEN expr ELSE . expr  (8)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 25
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	EXCLAM  shift 13
	.  error

	expr  goto 99
	var  goto 16
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 87
	atomic_expr : LPAR expr COMMA expr RPAR .  (39)

	.  reduce 39


state 88
	atomic_pattern : LPAR pattern . COMMA pattern RPAR  (24)
	atomic_pattern : LPAR pattern . RPAR  (26)

	RPAR  shift 100
	COMMA  shift 101
	.  error


state 89
	atomic_pattern : LBRACKET RBRACKET .  (25)

	.  reduce 25


state 90
	expr : MATCH expr WITH BAR cases .  (13)

	.  reduce 13


state 91
	cases : pattern ARROW . expr  (17)
	cases : pattern ARROW . expr BAR cases  (18)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 25
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	EXCLAM  shift 13
	.  error

	expr  goto 102
	var  goto 16
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 92
	pattern : atomic_pattern CONS . pattern  (19)

	INT  shift 69
	BOOL  shift 70
	ID  shift 22
	LPAR  shift 71
	LBRACKET  shift 72
	.  error

	var  goto 74
	pattern  goto 103
	atomic_pattern  goto 77


state 93
	toplevel : LET REC var var EQ expr . SEMISEMI  (4)
	expr : LET REC var var EQ expr . IN expr  (7)

	IN  shift 104
	SEMISEMI  shift 105
	.  error


state 94
	expr : LET var EQ REF expr IN . expr  (15)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 25
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	EXCLAM  shift 13
	.  error

	expr  goto 106
	var  goto 16
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 95
	toplevel : LET var EQ REF expr SEMISEMI .  (3)

	.  reduce 3


state 96
	expr : LET var EQ expr IN expr .  (6)

	.  reduce 6


state 97
	expr : LET REC var var EQ . expr IN expr  (7)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 25
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	EXCLAM  shift 13
	.  error

	expr  goto 107
	var  goto 16
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 98
	expr : LET var EQ REF expr . IN expr  (15)

	IN  shift 94
	.  error


state 99
	expr : IF expr THEN expr ELSE expr .  (8)

	.  reduce 8


state 100
	atomic_pattern : LPAR pattern RPAR .  (26)

	.  reduce 26


state 101
	atomic_pattern : LPAR pattern COMMA . pattern RPAR  (24)

	INT  shift 69
	BOOL  shift 70
	ID  shift 22
	LPAR  shift 71
	LBRACKET  shift 72
	.  error

	var  goto 74
	pattern  goto 108
	atomic_pattern  goto 77


102: shift/reduce conflict (shift 109, reduce 17) on BAR
state 102
	cases : pattern ARROW expr .  (17)
	cases : pattern ARROW expr . BAR cases  (18)

	BAR  shift 109
	IN  reduce 17
	THEN  reduce 17
	ELSE  reduce 17
	RPAR  reduce 17
	COMMA  reduce 17
	WITH  reduce 17
	SEMISEMI  reduce 17


state 103
	pattern : atomic_pattern CONS pattern .  (19)

	.  reduce 19


state 104
	expr : LET REC var var EQ expr IN . expr  (7)

	INT  shift 4
	BOOL  shift 5
	ID  shift 6
	LET  shift 25
	IF  shift 8
	LPAR  shift 9
	FUN  shift 10
	LBRACKET  shift 11
	MATCH  shift 12
	EXCLAM  shift 13
	.  error

	expr  goto 110
	var  goto 16
	arith_expr  goto 17
	list_expr  goto 18
	factor_expr  goto 19
	app_expr  goto 20
	atomic_expr  goto 21


state 105
	toplevel : LET REC var var EQ expr SEMISEMI .  (4)

	.  reduce 4


state 106
	expr : LET var EQ REF expr IN expr .  (15)

	.  reduce 15


state 107
	expr : LET REC var var EQ expr . IN expr  (7)

	IN  shift 104
	.  error


state 108
	atomic_pattern : LPAR pattern COMMA pattern . RPAR  (24)

	RPAR  shift 111
	.  error


state 109
	cases : pattern ARROW expr BAR . cases  (18)

	INT  shift 69
	BOOL  shift 70
	ID  shift 22
	LPAR  shift 71
	LBRACKET  shift 72
	.  error

	var  goto 74
	cases  goto 112
	pattern  goto 76
	atomic_pattern  goto 77


state 110
	expr : LET REC var var EQ expr IN expr .  (7)

	.  reduce 7


state 111
	atomic_pattern : LPAR pattern COMMA pattern RPAR .  (24)

	.  reduce 24


state 112
	cases : pattern ARROW expr BAR cases .  (18)

	.  reduce 18


State 102 contains 1 shift/reduce conflict.


33 terminals, 13 nonterminals
46 grammar rules, 113 states
